Bump fixed confirm toast z-index to max: 10

--- a/playbook/app/pb_kits/playbook/pb_fixed_confirmation_toast/_fixed_confirmation_toast.scss
+++ b/playbook/app/pb_kits/playbook/pb_fixed_confirmation_toast/_fixed_confirmation_toast.scss
@@ -33,7 +33,7 @@ $confirmation_toast_colors: (
 
   &.positioned_toast {
     position: fixed;
-    z-index: $z_9;
+    z-index: $z_10;
     display: flex;
     justify-content: space-around;
     max-width: max-content;
